\name{NEWS}
\title{NEWS file for the \pkg{ARTDECO} bioconductor package }
\section{Changes in version 1.0.2 [2021-09-13]}{
    \subsection{Version update}{
        \itemize{
            \item Dynamic cell type reporting enables for BSeq-sc
        }
    }
}
\section{Changes in version 0.99.4 [2021-09-09]}{
    \subsection{Version update}{
        \itemize{
            \item Added absolute cell type proportion predictions as parameter
        }
    }
}
\name{NEWS}
\title{NEWS file for the \pkg{ARTDECO} bioconductor package }
\section{Changes in version 0.99.1 [2019-10-10]}{
    \subsection{Version update}{
        \itemize{
            \item Checks and tests updated
        }
    }
}
\section{Changes in version 0.99.0 [2018-11-29]}{
    \subsection{New package released}{
        \itemize{
            \item First version of the ARTDECO package.
        }
    }
}
