@@ -1,6 +1,6 @@
 Package: artdeco
 Title: Alikeness Based on Regression on Transciptome DECOnvolution
-Version: 1.0.2
+Version: 1.0.3
 Authors@R: c(person("Raik", "Otto", role = c("aut", "cre"), email = 'raik.otto@hu-berlin.de'))
 Description: This packages determines the similarity cancer sample
  transcriptomes to samples with known differentiation stage. Training data input 
@@ -31,7 +31,8 @@ Suggests:
     knitr,
     rmarkdown,
     RUnit,
-    markdown
+    markdown,
+    xbioc
 biocViews:
     Sequencing,
     RNASeq,
